--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.1.3",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.58.0",
     "chart.js": "^4.4.1",
     "csv-parse": "^5.5.3",
     "csv-stringify": "^6.4.6",
@@ -27,4 +29,3 @@
     "typescript": "^5.3.3"
   }
 }
-
