feat: Add LLM-generated reports feature with LiteLLM integration
- Implement AI-powered manager and student report generation using LiteLLM
- Add manager reports with 5 sections (executive summary, dynamics, outcomes, observations, recommendations)
- Add personalized student reports with 6 sections (journey, strengths, skills, feedback, growth, next steps)
- Integrate submissions and structure data for deeper LLM analysis
- Add topic-level performance insights for student reports
- Create UI for generating, editing, and publishing AI reports
- Add database tables for manager_reports and student_reports with RLS policies
- Fix dashboard auto-refresh after report operations
- Fix topic analysis table visibility in saved student reports
- Clean up documentation and remove debug files
- Translate setup documentation to English

--- a/env.example
+++ b/env.example
@@ -7,3 +7,8 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 # Optional: Service role key for admin operations (keep this secret!)
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
+# LiteLLM Configuration
+# Internal Hyperskill LiteLLM proxy
+LITELLM_API_KEY=your_litellm_api_key
+LITELLM_BASE_URL=https://litellm.aks-hs-prod.int.hyperskill.org
+
