--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "csv-stringify": "^6.4.6",
     "dayjs": "^1.11.10",
     "next": "^14.2.3",
+    "openai": "^4.77.0",
     "radix-ui": "^1.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
