feat: implement PDF generation and user-based report sharing
- Remove is_public and is_published functionality
- Implement explicit user-based sharing via report_access table
- Add PDF generation for shared reports (manager-report-[id].pdf, student-report-[id].pdf)
- Separate dashboard views: admins see base reports, users see only shared reports
- Split manager and student reports into separate sections on dashboard
- Add ShareReportDialog for managing user access
- Update RLS policies for secure access control
- Clean up debug code and unused files

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "csv-parse": "^5.5.3",
     "csv-stringify": "^6.4.6",
     "dayjs": "^1.11.10",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.3",
     "next": "^14.2.3",
     "openai": "^4.77.0",
     "radix-ui": "^1.0.1",
