first mvp of feature ready

--- a/env.example
+++ b/env.example
@@ -12,3 +12,9 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 LITELLM_API_KEY=your_litellm_api_key
 LITELLM_BASE_URL=https://litellm.aks-hs-prod.int.hyperskill.org
 
+# Cogniterra API Configuration
+# For fetching course structure (module and lesson names)
+COGNITERRA_API_URL=https://cogniterra.org
+COGNITERRA_CLIENT_ID=your_cogniterra_client_id
+COGNITERRA_CLIENT_SECRET=your_cogniterra_client_secret
+
