--- a/env.example
+++ b/env.example
@@ -10,7 +10,7 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 # LiteLLM Configuration
 # Internal Hyperskill LiteLLM proxy
 LITELLM_API_KEY=your_litellm_api_key
-LITELLM_BASE_URL=https://litellm.aks-hs-prod.int.hyperskill.org
+LITELLM_BASE_URL=your_litellm_base_url
 
 # Cogniterra API Configuration
 # For fetching course structure (module and lesson names)
