data to LLM and related tests

--- a/env.example
+++ b/env.example
@@ -18,3 +18,8 @@ COGNITERRA_API_URL=https://cogniterra.org
 COGNITERRA_CLIENT_ID=your_cogniterra_client_id
 COGNITERRA_CLIENT_SECRET=your_cogniterra_client_secret
 
+# Testing Credentials (for automated LLM tests)
+# Add your admin account credentials to enable automatic authentication in test scripts
+TEST_ADMIN_EMAIL=your-admin@email.com
+TEST_ADMIN_PASSWORD=your-password
+
