--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "dotenv": "^17.2.3",
     "typescript": "^5.3.3"
   }
 }
